<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<TableRow
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:src="@drawable/wednesday" />
    <TextView 
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/m" />
    </TableRow>
    <TableRow
        <TextView 
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/i" />
        
        <TextView 
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/j" />
        
        <TextView 
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/k" />
        
        <TextView 
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/l" />
    </TableRow>
    
<TableRow >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:src="@drawable/monday" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:src="@drawable/tuesday" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:src="@drawable/thur" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:src="@drawable/wednesday" />

</TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/a" />
        
         <TextView 
             android:id="@+id/textView2"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/b"  />
         
          <TextView 
              android:id="@+id/textView3"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/c" />
          
           <TextView 
               android:id="@+id/textView4"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/d" />
           </TableRow>
           
    <TableRow>
           <TextView 
               android:id="@+id/textView5"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/e" />
           
           <TextView 
               android:id="@+id/textView6"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/f" />
           
           <TextView 
               android:id="@+id/textView7"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/g" />
           
           <TextView 
               android:id="@+id/textView8"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/h" />
           
           
        
    </TableRow>
</TableLayout>
